       to modify the database data through this transaction.
   - ovs-appctl:
     * 'ovs/route/show': added new option, table=[ID|all], to list routes from
       a specific table or all routes from all tables.
     * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
       add/delete a route from a specific table.
     * Added a new sub-command, ovs/route/rule/show, to list OVS routing rules.
   - Windows Support
     * Support for compiling for and running on Windows has been deprecated.
   - Deprecation of support for running OVS user-space with OOT kernel module
     * The OOT kernel module refers to the kernel module that was
       previously distributed as part of OVS - out of tree (OOT) from the
       perspective of the upstream Kernel tree.
     * The OOT kernel module: was deprecated in v2.15; was last present in
       the v2.17 release; and is no longer present in any supported release
       since v2.17 went EOL when v3.5 was released.
   - The following AVX512-specific features are now deprecated:
     * AVX512-optimized DPCLS lookups.
     * AVX512-optimized action handling.
     * AVX512-optimized miniflow extraction.
     * AVX512-optimized DPIF input processing.


v3.6.0 - 18 Aug 2025
--------------------
   - Bonding:
     * Bond rebalancing log messages of INFO log level are highly reduced: they
       are now printed once in rebalance run.  Previous detailed log messages
       have been moved to the DBG log level.
   - DPDK:
     * New debug appctl command 'dpdk/get-memzone-stats'.
     * Removed upper limit for the number of rx/tx descriptors (n_r/txq_desc).
     * OVS validated with DPDK 24.11.2.
   - OVSDB performance:
     * Table indexes are now used for lookups while processing certain database
       queries (e.g. 'select' operation).
     * JSON data structures are re-worked to allow storing short strings and
       arrays in-place, improving performance and the total memory usage.
   - OVSDB-IDL: